# frappe-kafka

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frappe_kafka/: __init__.py  events.py  hooks.py  modules.txt
frappe_kafka/config/: desktop.py  docs.py
frappe_kafka/frappe_kafka/: __init__.py
frappe_kafka/frappe_kafka/doctype/kafka_connector/: __init__.py  kafka_connector.js  kafka_connector.json  kafka_connector.py  test_kafka_connector.py
frappe_kafka/frappe_kafka/doctype/kafka_docevent/: kafka_docevent.js  kafka_docevent.json  kafka_docevent.py  test_kafka_docevent.py
frappe_kafka/frappe_kafka/doctype/kafka_docevent_detail/: kafka_docevent_detail.json  kafka_docevent_detail.py
frappe_kafka/frappe_kafka/doctype/kafka_settings/: kafka_settings.js  kafka_settings.json  kafka_settings.py  test_kafka_settings.py
